fix html componente editar v3

--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -6,7 +6,7 @@
     </div>
 
     <div class="right-side flex flex-col justify-center text-center md:text-left w-full md:w-1/2 mt-6 md:mt-0">
-      <h2 class="text-4xl font-extrabold text-gray-900">Bienvenido a la App de Facturaciónnnn 📋</h2>
+      <h2 class="text-4xl font-extrabold text-gray-900">Bienvenido a la App de Facturación 📋</h2>
       <p class="text-gray-700 mt-4">
         Gestiona tus facturas de manera rápida y sencilla. Optimiza tu tiempo con nuestra plataforma intuitiva.
       </p>
