ajustes de diseño

--- a/src/app/features/facturas/components/factura-detail/factura-detail.component.html
+++ b/src/app/features/facturas/components/factura-detail/factura-detail.component.html
@@ -1,65 +1,80 @@
 <app-header title="Dashboard"></app-header>
+<main class="bg-gray-50 dark:bg-gray-900 p-3 sm:p-5">
+  <div class="mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8 bg-gray-100">
+    <div class="container mx-auto p-6">
+      <h2 class="text-2xl font-semibold text-gray-800">Detalle Factura</h2>
+      <!-- Formulario Cabecera -->
+      <div class="mt-6 grid grid-cols-1 sm:grid-cols-2 gap-6">
+        <div>
+          <label class="block text-gray-700">Número de Factura:</label>
+          <input type="text" [(ngModel)]="invoice.numInvoice" name="numInvoice"
+        class="block w-full rounded-md bg-gray-300 px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6" disabled="true">
+        </div>
+        <div>
+          <label class="block text-gray-700">Cliente:</label>
+          <input type="text" [(ngModel)]="invoice.customer" name="customer"
+        class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6">
+        </div>
+        <div class="sm:col-span-2">
+          <label class="block text-gray-700">Total:</label>
+          <input type="number" [(ngModel)]="invoice.total" name="total" readonly
+        class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6">
+        </div>
+      </div>
 
-<div class="container mx-auto p-6">
-  <h2 class="text-2xl font-semibold text-gray-800">Editar Factura</h2>
-  <!-- Formulario Cabecera -->
-  <div class="mt-6">
-    <label class="block mt-4 text-gray-700">Número de Factura:</label>
-    <input type="text" [(ngModel)]="invoice.numInvoice" name="numInvoice"
-      class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6" disabled="true">
+        <!-- Tabla Detalle de Factura -->
+        <h3 class="text-xl font-semibold mt-6">Detalle de la Factura</h3>
 
-    <label class="block mt-4 text-gray-700">Cliente:</label>
-    <input type="text" [(ngModel)]="invoice.customer" name="customer" class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6">
+        <table class="table-auto w-full mt-4 border-collapse">
+          <thead>
+            <tr>
+              <th class="border px-4 py-2">Producto</th>
+              <th class="border px-4 py-2">Cantidad</th>
+              <th class="border px-4 py-2">Precio</th>
+              <th class="border px-4 py-2">Subtotal</th>
+              <th class="border px-4 py-2">Acciones</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let detalle of invoice.details; let i = index">
+              <td class="border px-4 py-2">
+                <input type="text" [(ngModel)]="detalle.product" name="producto-{{i}}"
+                  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6" disabled="true">
+              </td>
+              <td class="border px-4 py-2">
+                <input type="number" [(ngModel)]="detalle.quantity" name="cantidad-{{i}}"
+                  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6" (input)="calcularTotal()" disabled="true">
+              </td>
+              <td class="border px-4 py-2">
+                <input type="number" [(ngModel)]="detalle.unitPrice" name="precio-{{i}}"
+                  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6" (input)="calcularTotal()" disabled="true">
+              </td>
+              <td class="border px-4 py-2">
+                {{ calcularSubtotal(detalle) | currency }}
 
-    <label class="block mt-4 text-gray-700">Total:</label>
-    <input type="number" [(ngModel)]="invoice.total" name="total" readonly
-      class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6">
+              </td>
+              <td class="border px-4 py-2">
+                <div class="flex justify-center">
+                  <button type="button" (click)="confirmarEliminacion(detalle.id, i)"
+                    class="text-red-600 hover:text-red-800 dark:text-red-400 dark:hover:text-red-600 cursor-pointer">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                      <path fill-rule="evenodd"
+                        d="M9 3a1 1 0 011-1h2a1 1 0 011 1v1h5a1 1 0 110 2H3a1 1 0 110-2h5V3zM4 7h12l-.854 9.146A2 2 0 0113.152 18H6.848a2 2 0 01-1.994-1.854L4 7zm4 2a1 1 0 112 0v6a1 1 0 11-2 0V9zm4 0a1 1 0 112 0v6a1 1 0 11-2 0V9z"
+                        clip-rule="evenodd" />
+                    </svg>
+                  </button>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+          <tfoot>
+            <tr class="border-t-2">
+              <td colspan="3" class="border px-4 py-2 text-right">Total:</td>
+              <td class="border px-4 py-2">{{ invoice.total | currency }}</td>
+            </tr>
+          </tfoot>
+        </table>
+      </div>
+    </div>
 
-    <!-- Tabla Detalle de Factura -->
-    <h3 class="text-xl font-semibold mt-6">Detalle de la Factura</h3>
-
-    <table class="table-auto w-full mt-4 border-collapse">
-      <thead>
-        <tr>
-          <th class="border px-4 py-2">Producto</th>
-          <th class="border px-4 py-2">Cantidad</th>
-          <th class="border px-4 py-2">Precio</th>
-          <th class="border px-4 py-2">Subtotal</th>
-          <th class="border px-4 py-2">Acciones</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let detalle of invoice.details; let i = index">
-          <td class="border px-4 py-2">
-            <input type="text" [(ngModel)]="detalle.product" name="producto-{{i}}"
-              class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6" disabled="true">
-          </td>
-          <td class="border px-4 py-2">
-            <input type="number" [(ngModel)]="detalle.quantity" name="cantidad-{{i}}"
-              class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6" (input)="calcularTotal()" disabled="true">
-          </td>
-          <td class="border px-4 py-2">
-            <input type="number" [(ngModel)]="detalle.unitPrice" name="precio-{{i}}"
-              class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6" (input)="calcularTotal()" disabled="true">
-          </td>
-          <td class="border px-4 py-2">
-            {{ calcularSubtotal(detalle) | currency }}
-
-          </td>
-          <td class="border px-4 py-2">
-            <button type="button" (click)="confirmarEliminacion(detalle.id, i)"
-               class="inline-flex items-center rounded-md bg-red-600 px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-red-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-600">
-                🗑️
-            </button>
-          </td>
-        </tr>
-      </tbody>
-      <tfoot>
-        <tr class="border-t-2">
-          <td colspan="3" class="border px-4 py-2 text-right">Total:</td>
-          <td class="border px-4 py-2">{{ invoice.total | currency }}</td>
-        </tr>
-      </tfoot>
-    </table>
-  </div>
-</div>
+</main>
