--- a/src/app/features/facturas/components/factura-form/factura-form.component.html
+++ b/src/app/features/facturas/components/factura-form/factura-form.component.html
@@ -1,5 +1,5 @@
 <app-header title="Dashboard"></app-header>
-<main>
+<main class="bg-gray-50 dark:bg-gray-900 p-3 sm:p-5">
   <div class="mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8">
     <div class="max-w-4xl mx-auto bg-white p-6 rounded-lg shadow-md">
       <h2 class="text-xl font-semibold mb-4">Registrar Factura</h2>
@@ -22,19 +22,27 @@
               class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6">
           </div>
         </div>
-
+        <br />
         <div *ngFor="let detail of details.controls; let i = index" [formGroup]="getDetailGroup(i)"
-          class="mb-2 border p-2 rounded">
+          class="mb-2 border border-gray-300 p-2 rounded flex items-center space-x-4">
+         <div class="flex-1">
           <label class="block font-medium">Producto:</label>
-          <input type="text" [formControlName]="'product'" class="w-full p-2 border rounded" />
+          <input type="text" [formControlName]="'product'"
+            class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6" />
+         </div>
 
+         <div class="flex-1">
           <label class="block font-medium">Cantidad:</label>
-          <input type="number" [formControlName]="'quantity'" class="w-full p-2 border rounded" />
+          <input type="number" [formControlName]="'quantity'"
+            class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6" />
+         </div>
 
+         <div class="flex-1">
           <label class="block font-medium">Precio:</label>
-          <input type="number" [formControlName]="'unitPrice'" class="w-full p-2 border rounded" />
+          <input type="number" [formControlName]="'unitPrice'" class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6" />
+         </div>
 
-          <button type="button" (click)="eliminarDetalle(i)" class="text-red-500">Eliminar</button>
+          <button type="button" (click)="eliminarDetalle(i)" class="inline-flex items-center rounded-md bg-red-600 px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-red-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-600 self-end">🗑️</button>
         </div>
 
         <div class="flex justify-between mt-4">
