--- a/src/app/features/facturas/components/factura-editar/factura-editar.component.html
+++ b/src/app/features/facturas/components/factura-editar/factura-editar.component.html
@@ -1,5 +1,5 @@
 <app-header title="Dashboard"></app-header>
-<main class="bg-gray-50 dark:bg-gray-900 p-3 sm:p-5">
+<main class="bg-gray-50 dark:bg-gray-700 p-3 sm:p-5">
   <div class="mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8 bg-gray-100">
     <div class="container mx-auto p-6">
       <h2 class="text-2xl font-semibold text-gray-800">Editar Factura</h2>
@@ -28,57 +28,59 @@
           <!-- Tabla Detalle de Factura -->
           <h3 class="text-xl font-semibold mt-6">Detalle de la Factura</h3>
 
-          <table class="table-auto w-full mt-4 border-collapse">
-            <thead>
-              <tr>
-                <th class="border px-4 py-2">Producto</th>
-                <th class="border px-4 py-2">Cantidad</th>
-                <th class="border px-4 py-2">Precio</th>
-                <th class="border px-4 py-2">Subtotal</th>
-                <th class="border px-4 py-2">Acciones</th>
-              </tr>
+          <div class="overflow-x-auto mt-4">
+          <table class="min-w-full divide-y divide-gray-200">
+            <thead class="bg-gray-50">
+            <tr>
+              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Producto</th>
+              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Cantidad</th>
+              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Precio</th>
+              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Subtotal</th>
+              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Acciones</th>
+            </tr>
             </thead>
-            <tbody>
-              <tr *ngFor="let detalle of invoice.details; let i = index" class="border-b border-gray-200">
-                <td class="border px-4 py-2">
-                  <input type="text" [(ngModel)]="detalle.product" name="producto-{{i}}"
-                    class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6"
-                    required="">
+            <tbody class="bg-white divide-y divide-gray-200">
+              <tr *ngFor="let detalle of invoice.details; let i = index">
+                <td class="px-6 py-4 whitespace-nowrap">
+                <input type="text" [(ngModel)]="detalle.product" name="producto-{{i}}"
+                  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6"
+                  required="">
                 </td>
-                <td class="border px-4 py-2">
-                  <input type="number" [(ngModel)]="detalle.quantity" name="cantidad-{{i}}"
-                    class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6"
-                    required="" (input)="calcularTotal()">
+                <td class="px-6 py-4 whitespace-nowrap">
+                <input type="number" [(ngModel)]="detalle.quantity" name="cantidad-{{i}}"
+                  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6"
+                  required="" (input)="calcularTotal()">
                 </td>
-                <td class="border px-4 py-2">
-                  <input type="number" [(ngModel)]="detalle.unitPrice" name="precio-{{i}}"
-                    class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6"
-                    required="" (input)="calcularTotal()">
+                <td class="px-6 py-4 whitespace-nowrap">
+                <input type="number" [(ngModel)]="detalle.unitPrice" name="precio-{{i}}"
+                  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6"
+                  required="" (input)="calcularTotal()">
                 </td>
-                <td class="border px-4 py-2">
-                  {{ calcularSubtotal(detalle) | currency }}
+                <td class="px-6 py-4 whitespace-nowrap">
+                {{ calcularSubtotal(detalle) | currency }}
                 </td>
-                <td class="border px-4 py-2">
-                  <div class="flex justify-center">
-                    <button type="button" (click)="confirmarEliminacion(detalle.id, i); calcularTotal()"
-                      class="text-red-600 hover:text-red-800 dark:text-red-400 dark:hover:text-red-600 cursor-pointer">
-                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                        <path fill-rule="evenodd"
-                          d="M9 3a1 1 0 011-1h2a1 1 0 011 1v1h5a1 1 0 110 2H3a1 1 0 110-2h5V3zM4 7h12l-.854 9.146A2 2 0 0113.152 18H6.848a2 2 0 01-1.994-1.854L4 7zm4 2a1 1 0 112 0v6a1 1 0 11-2 0V9zm4 0a1 1 0 112 0v6a1 1 0 11-2 0V9z"
-                          clip-rule="evenodd" />
-                      </svg>
-                    </button>
-                  </div>
+                <td class="px-6 py-4 whitespace-nowrap">
+                <div class="flex justify-center">
+                  <button type="button" (click)="confirmarEliminacion(detalle.id, i); calcularTotal()"
+                  class="text-red-600 hover:text-red-800 dark:text-red-400 dark:hover:text-red-600 cursor-pointer">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd"
+                    d="M9 3a1 1 0 011-1h2a1 1 0 011 1v1h5a1 1 0 110 2H3a1 1 0 110-2h5V3zM4 7h12l-.854 9.146A2 2 0 0113.152 18H6.848a2 2 0 01-1.994-1.854L4 7zm4 2a1 1 0 112 0v6a1 1 0 11-2 0V9zm4 0a1 1 0 112 0v6a1 1 0 11-2 0V9z"
+                    clip-rule="evenodd" />
+                  </svg>
+                  </button>
+                </div>
                 </td>
               </tr>
             </tbody>
-            <tfoot>
-              <tr class="border-t-2">
-                <td colspan="3" class="border px-4 py-2 text-right">Total:</td>
-                <td class="border px-4 py-2">{{ invoice.total | currency }}</td>
-              </tr>
+            <tfoot class="bg-gray-50">
+            <tr>
+              <td colspan="3" class="px-6 py-3 text-right text-xs font-medium text-gray-500 uppercase tracking-wider">Total:</td>
+              <td class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">{{ invoice.total | currency }}</td>
+            </tr>
             </tfoot>
           </table>
+          </div>
           <br />
             <div class="flex space-x-4">
             <button type="button" (click)="agregarDetalle()"
