--- a/src/app/features/facturas/components/factura-list/factura-list.component.html
+++ b/src/app/features/facturas/components/factura-list/factura-list.component.html
@@ -1,10 +1,10 @@
 <app-header title="Dashboard"></app-header>
-<main class="bg-gray-50 dark:bg-gray-900 p-3 sm:p-5">
+<main class="p-3 sm:p-5">
   <div class="mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8">
-    <section class="bg-gray-50 dark:bg-gray-900 p-3 sm:p-5">
+    <section class="">
       <div class="mx-auto max-w-screen-xl px-4 lg:px-12">
         <!-- Start coding here -->
-        <div class="bg-white dark:bg-gray-800 relative shadow-md sm:rounded-lg overflow-hidden">
+        <div class="bg-white dark:bg-gray-700 relative shadow-md sm:rounded-lg overflow-hidden">
           <div class="flex flex-col md:flex-row items-center justify-between space-y-3 md:space-y-0 md:space-x-4 p-4">
             <div class="w-full md:w-1/2">
                 <label for="simple-search" class="sr-only">Search</label>
@@ -18,28 +18,9 @@
                     </svg>
                   </div>
                   <input type="text" id="simple-search" [(ngModel)]="searchTerm" name="searchTerm"
-                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full pl-10 p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full pl-10 p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-indigo-500 dark:focus:border-indigo-500"
                     placeholder="Search by customer" (input)="filterInvoices(searchTerm)">
                 </div>
-            </div>
-            <div
-              class="w-full md:w-auto flex flex-col md:flex-row space-y-2 md:space-y-0 items-stretch md:items-center justify-end md:space-x-3 flex-shrink-0">
-              <div class="flex items-center space-x-3 w-full md:w-auto">
-                <button id="actionsDropdownButton" data-dropdown-toggle="actionsDropdown"
-                  class="w-full md:w-auto flex items-center justify-center py-2 px-4 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700"
-                  type="button">
-                  <svg class="-ml-1 mr-1.5 w-5 h-5" fill="currentColor" viewbox="0 0 20 20"
-                    xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                    <path clip-rule="evenodd" fill-rule="evenodd"
-                      d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" />
-                  </svg>
-                  Actions
-                </button>
-
-                <div id="filterDropdown" class="z-10 hidden w-48 p-3 bg-white rounded-lg shadow dark:bg-gray-700">
-
-                </div>
-              </div>
             </div>
           </div>
           <div class="overflow-x-auto">
@@ -54,10 +35,10 @@
             </thead>
             <tbody>
               <tr *ngFor="let invoice of invoices | paginate: { itemsPerPage: itemsPerPage, currentPage: page }"
-                class="border-b bg-white hover:bg-gray-100 transition dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
-                <td class="px-4 py-3 text-gray-700 dark:text-gray-300">{{ invoice.id }}</td>
-                <td class="px-4 py-3 text-gray-700 dark:text-gray-300">{{ invoice.customer }}</td>
-                <td class="px-4 py-3 text-gray-700 dark:text-gray-300">{{ invoice.date }}</td>
+                class="border-b bg-white hover:bg-gray-100 transition dark:bg-gray-700 dark:border-gray-700 dark:hover:bg-gray-700">
+                <td class="px-4 py-3 text-gray-700 dark:text-gray-300 border">{{ invoice.id }}</td>
+                <td class="px-4 py-3 text-gray-700 dark:text-gray-300 border">{{ invoice.customer }}</td>
+                <td class="px-4 py-3 text-gray-700 dark:text-gray-300 border">{{ invoice.date }}</td>
                 <td class="px-4 py-3 flex justify-center space-x-2">
                   <a [routerLink]="['/invoice/edit', invoice.id]"
                     class="text-blue-600 hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-600" title="Editar">
@@ -90,15 +71,21 @@
             aria-label="Table navigation">
             <span class="text-sm font-normal text-gray-500 dark:text-gray-400">
               Showing
-              <span class="font-semibold text-gray-900 dark:text-white">1-10</span>
+              <span class="font-semibold text-gray-900 dark:text-white">{{ (page - 1) * itemsPerPage + 1 }}</span>
+              to
+              <span class="font-semibold text-gray-900 dark:text-white">{{ page * itemsPerPage > totalItems ? totalItems : page * itemsPerPage }}</span>
               of
-              <span class="font-semibold text-gray-900 dark:text-white">1000</span>
+              <span class="font-semibold text-gray-900 dark:text-white">{{ totalItems }}</span>
             </span>
-            <ul class="inline-flex items-stretch -space-x-px">
-              <pagination-controls (pageChange)="page = $event" previousLabel="Anterior" nextLabel="Siguiente" [responsive]="true">
+            <ul class="inline-flex items-stretch -space-x-px text-white">
+              <pagination-controls
+              (pageChange)="page = $event"
+              previousLabel="Anterior"
+              nextLabel="Siguiente" [responsive]="true"
+              >
               </pagination-controls>
             </ul>
-          </nav>
+            </nav>
         </div>
       </div>
     </section>
