--- a/src/app/features/facturas/components/factura-list/factura-list.component.html
+++ b/src/app/features/facturas/components/factura-list/factura-list.component.html
@@ -25,7 +25,7 @@
           </div>
           <div class="overflow-x-auto">
           <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
-            <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+            <thead class="text-xs text-gray-500 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
               <tr>
                 <th scope="col" class="px-4 py-3">ID</th>
                 <th scope="col" class="px-4 py-3">Cliente</th>
@@ -34,11 +34,11 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let invoice of invoices | paginate: { itemsPerPage: itemsPerPage, currentPage: page }"
-                class="border-b bg-white hover:bg-gray-100 transition dark:bg-gray-700 dark:border-gray-700 dark:hover:bg-gray-700">
-                <td class="px-4 py-3 text-gray-700 dark:text-gray-300 border">{{ invoice.id }}</td>
-                <td class="px-4 py-3 text-gray-700 dark:text-gray-300 border">{{ invoice.customer }}</td>
-                <td class="px-4 py-3 text-gray-700 dark:text-gray-300 border">{{ invoice.date }}</td>
+              <tr *ngFor="let invoice of invoices  | paginate: { itemsPerPage: itemsPerPage, currentPage: page }"
+                class="border-b bg-white hover:bg-gray-100 transition dark:bg-gray-600 dark:border-gray-700 dark:hover:bg-gray-500">
+                <td class="px-4 py-3 text-gray-700 dark:text-gray-300">{{ invoice.id }}</td>
+                <td class="px-4 py-3 text-gray-700 dark:text-gray-300">{{ invoice.customer }}</td>
+                <td class="px-4 py-3 text-gray-700 dark:text-gray-300">{{ invoice.date }}</td>
                 <td class="px-4 py-3 flex justify-center space-x-2">
                   <a [routerLink]="['/invoice/edit', invoice.id]"
                     class="text-blue-600 hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-600" title="Editar">
@@ -54,7 +54,7 @@
                         d="M10 3a7 7 0 00-7 7 7 7 0 0014 0 7 7 0 00-7-7zm0 2a5 5 0 015 5 5 5 0 01-10 0 5 5 0 015-5zm0 2a3 3 0 100 6 3 3 0 000-6z" />
                     </svg>
                   </a>
-                  <button (click)="deleteFactura(invoice.id)"
+                  <button (click)="confirmarEliminacion(invoice.id)"
                     class="text-red-600 hover:text-red-800 dark:text-red-400 dark:hover:text-red-600 cursor-pointer" title="Eliminar">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                       <path fill-rule="evenodd"
