ajustes de diseño v4

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,6 +18,14 @@
     </div>
     <div class="hidden lg:flex lg:gap-x-12">
       <div class="relative">
+        <a [routerLink]="['/']" type="button" class="flex items-center gap-x-1 text-sm/6 font-semibold text-gray-900"
+          aria-expanded="false">
+          Inicio
+
+        </a>
+
+      </div>
+      <div class="relative">
         <a [routerLink]="['/invoices']" type="button" class="flex items-center gap-x-1 text-sm/6 font-semibold text-gray-900"
           aria-expanded="false">
           Facturas
