--- a/src/app/features/facturas/components/factura-list/factura-list.component.html
+++ b/src/app/features/facturas/components/factura-list/factura-list.component.html
@@ -7,7 +7,7 @@
         <div class="relative w-full md:w-1/2">
           <input type="text" id="simple-search" [(ngModel)]="searchTerm" name="searchTerm"
             class="bg-gray-100 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 w-full pl-10 p-2 dark:bg-gray-700 dark:border-gray-600 dark:text-white"
-            placeholder="Buscar por cliente" (input)="filterInvoices(searchTerm)">
+            placeholder="Buscar por cliente" (input)="filtrarFactura(searchTerm)">
           <div class="absolute inset-y-0 left-0 flex items-center pl-3">
             <svg aria-hidden="true" class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor"
               viewBox="0 0 20 20">
@@ -25,6 +25,7 @@
               <th scope="col" class="px-6 py-3">ID</th>
               <th scope="col" class="px-6 py-3">Cliente</th>
               <th scope="col" class="px-6 py-3">Fecha</th>
+              <th scope="col" class="px-6 py-3">Estado</th>
               <th scope="col" class="px-6 py-3 text-center">Acciones</th>
             </tr>
           </thead>
@@ -34,6 +35,11 @@
               <td class="px-6 py-4 font-medium text-gray-900 dark:text-white">{{ invoice.id }}</td>
               <td class="px-6 py-4">{{ invoice.customer }}</td>
               <td class="px-6 py-4">{{ invoice.date }}</td>
+              <td class="px-6 py-4">
+                <span
+                  [ngClass]="{'bg-green-100 text-green-800': invoice.status === false ? 'Inactiva' : 'Activa', 'bg-red-100 text-red-800': invoice.status === true ? 'Activa' : 'Inactiva'}"
+                  class="px-2 py-1 rounded-full text-xs font-semibold">{{ invoice.status }}</span>
+              </td>
               <td class="px-6 py-4 flex justify-center space-x-4">
                 <a [routerLink]="['/invoice/edit', invoice.id]" class="text-blue-500 hover:text-blue-700"
                   title="Editar">
@@ -56,6 +62,15 @@
                       clip-rule="evenodd" />
                   </svg>
                 </button>
+
+                <!-- <button (click)="cambiarEstado(invoice.id, invoice.status)"
+                  [ngClass]="{'text-green-500 hover:text-green-700': invoice.status === false, 'text-red-500 hover:text-red-700': invoice.status === true}"
+                  title="Cambiar Estado">
+
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                    <path d="M10 2a8 8 0 100 16 8 8 0 000-16zm1 11H9v-2h2v2zm0-4H9V5h2v4z" />
+                  </svg>
+                </button> -->
               </td>
             </tr>
           </tbody>
